<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">SkyFly</string>
    <string name="text_home">Home</string>
    <string name="text_riwayat">History</string>
    <string name="text_notification">Notifications</string>
    <string name="text_profile">Profile</string>
    <string name="text_email_or_no_tlp_title">Email / Phone Number</string>
    <string name="text_input_email_hint">Enter email</string>
    <string name="text_password">Password</string>
    <string name="text_hint_password">Enter password</string>
    <string name="text_login">Login</string>
    <string name="text_sub_login">Log in to access more features.</string>
    <string name="text_forget_password">Forgot password?\n</string>
    <string name="tv_not_have_account">Don\'t have an account? Register</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_hint_full_name">Enter full name\n</string>
    <string name="text_profile_email">Email</string>
    <string name="text_hint_email">Enter email</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_hint_confirm_password">Confirm password\n</string>
    <string name="text_no_telp">Phone Number</string>
    <string name="text_hint_no_tlp">Enter phone number\n</string>
    <string name="text_register">Register</string>
    <string name="text_sub_register">Register yourself and enjoy the ease of booking flight tickets.</string>
    <string name="text_already_have_account">Already have an account? Login</string>
    <string name="text_input_otp">Enter OTP</string>
    <string name="text_otp">Enter the 6-digit code sent to </string>
    <string name="text_resend_otp">Resend OTP in 60 seconds</string>
    <string name="text_req_new_otp">Request a new code via SMS</string>
    <string name="text_fullname_cannot_empty">Full name cannot be empty!</string>
    <string name="text_email_cannot_empty">Email cannot be empty!</string>
    <string name="text_invalid_email_format">Enter a valid format!</string>
    <string name="text_password_cannot_empty">Password cannot be empty!</string>
    <string name="text_password_should_be_8_character"><![CDATA[Password must be > 8 characters!]]></string>
    <string name="text_password_doesnt_match">Passwords do not match!</string>
    <string name="text_no_tlp_cannot_empty">Phone number cannot be empty!</string>
    <string name="text_reset_password_title">Reset Password</string>
    <string name="text_email">Email</string>
    <string name="text_email_hint">Enter email</string>
    <string name="text_submit">Submit</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="text_header">Booker’s Biodata</string>
    <string name="text_fullname_title">Full Name</string>
    <string name="text_family_name">Family Name</string>
    <string name="text_family_name_hint">Enter family name</string>
    <string name="text_have_family_name">Have a family name?</string>
    <string name="text_customer_biodata_title">Booker\'s Biodata</string>
    <string name="text_save">Save</string>
    <string name="text_title">Title</string>
    <string name="text_date_of_birth">Date of Birth</string>
    <string name="text_country">Nationality</string>
    <string name="text_country_value">Enter nationality</string>
    <string name="text_ktp_or_passport">ID/Passport</string>
    <string name="text_ktp_or_passport_hint">Enter ID/Passport</string>
    <string name="text_valid_until">Valid Until</string>
    <string name="text_choose_seat">Proceed to Choose Seat</string>
    <string name="text_passenger_biodata">Passenger 1 - </string>
    <string name="text_fullname">Full Name</string>
    <string name="text_fullname_hint">Enter full name</string>
    <string name="text_passenger_biodata_title">Passenger’s Biodata</string>
    <string name="text_seat_title">Economy - 64 Seats Available</string>
    <string name="text_header_choose_seat">Choose Seat (JKT - MLB - Economy)</string>
    <string-array name="titles_array">
        <item>Mr.</item>
        <item>Ms.</item>
        <item>Mrs.</item>
        <item>Dr.</item>
        <item>Prof.</item>
    </string-array>
    <string name="text_title_order_history">Flight History</string>
    <string name="text_filter">Filter</string>
    <string name="text_unpaid">UNPAID</string>
    <string name="text_city">Los Angeles</string>
    <string name="text_date">Enter date or birth</string>
    <string name="text_time">19:10</string>
    <string name="text_flight_duration">4h 0m</string>
    <string name="text_title_booking_code">Booking Code :</string>
    <string name="text_title_class">Class:</string>
    <string name="text_example_total">IDR 4,000,000</string>
    <string name="text_example_booking_code">974974004</string>
    <string name="text_example_class">Business</string>
    <string name="text_flight_details">Flight Details</string>
    <string name="text_departure">Departure</string>
    <string name="text_example_airport">Soekarno Hatta - Terminal 3</string>
    <string name="text_example_terminal">Terminal 1A Domestic</string>
    <string name="text_detail_airline">Jet Air - </string>
    <string name="text_example_flight_number">JT - 203</string>
    <string name="text_title_information">Information:</string>
    <string name="text_title_passenger">Passenger 1:</string>
    <string name="text_example_passenger_name">Mr. Harry Potter</string>
    <string name="text_title_id">ID:</string>
    <string name="text_example_id_passenger">1234567</string>
    <string name="text_arrival_time">22:00</string>
    <string name="text_example_destination_airport">Melbourne International Airport</string>
    <string name="text_arrival">Arrival</string>
    <string name="text_title_price_details">Price Details</string>
    <string name="text_total_by_age_group">2 Adults</string>
    <string name="text_total_price_by_age_group">IDR 9,550,000</string>
    <string name="text_title_tax">Tax</string>
    <string name="text_example_tax">IDR 300,000</string>
    <string name="text_title_total">Total</string>
    <string name="text_total_price">IDR 9,850,000</string>
    <string name="text_proceed_to_payment">Proceed to Payment</string>
    <string name="text_destination"><![CDATA[Jakarta -> Melbourne (4h 0m)]]></string>
    <string name="text_baggage">Baggage 20kg</string>
    <string name="text_baggage_cabin_weight">Cabin Baggage 7kg</string>
    <string name="text_in_flight_entertainment">In-Flight Entertainment</string>
    <string name="text_header_detail_history">Flight Details</string>
    <string name="proceed_login">Login-proceed</string>
    <string name="email_or_password_is_incorrect">Email or Password incorrect!</string>
    <string name="text_countdown_otp">Resend OTP in %1$s seconds</string>
    <string name="text_register_success">Registration successful!</string>
    <string name="text_success_verify_account">Verification successful!</string>
    <string name="text_resend_otp_title">Resend</string>
    <string name="text_success_reset_password">Password reset successfully!</string>
    <string name="text_bottom_sheets_no_loggin">Sorry, you must log in first!</string>
    <string name="text_notification_type">Promotion</string>
    <string name="text_notification_content">Get 50% Ticket Discount!</string>
    <string name="text_sub_notification">Terms and conditions apply!</string>
    <string name="text_notification_Date">March 20, 2024, 14:40</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_settings">Settings</string>
    <string name="text_logout">Logout</string>
    <string name="text_version">v1.3.2</string>
    <string name="text_name">Komang Yuda Saputra</string>
    <string name="text_user_email">komangyuda@example.com</string>
    <string name="text_welcome">Welcome to SkyFly!</string>
    <string name="text_desc_welcome">Buy tickets anytime, anywhere!</string>
    <string name="text_on_boarding_title_first">Find the Best Flights!</string>
    <string name="text_on_boarding_sub_title">Explore various flight options with the best prices and departure times that suit your needs.</string>
    <string name="text_on_boarding_second_title">Book Tickets Easily!</string>
    <string name="text_on_boarding_second_sub_title">Quick and easy booking process, just a few taps. Find and book your flight tickets in minutes.</string>
    <string name="text_on_boarding_third_title">Enjoy Your Journey!</string>
    <string name="text_on_boarding_thirt_sub_title">Get flight notifications and travel details directly in the app. Ready for a more comfortable and enjoyable travel experience?</string>
    <string name="text_recent_search">Recent Searches</string>
    <string name="text_delete">Delete</string>
    <string name="text_month">September - 2023</string>
    <string name="text_date_daparture">Departure Date</string>
    <string name="text_date_departure">Tuesday, May 14, 2024</string>
    <string name="text_back_title">Return Date</string>
    <string name="text_input_flight_number">Enter Flight Number</string>
    <string name="text_history_data_empty">Oops! Order History is Empty</string>
    <string name="text_havent_made_a_booking">You Haven\'t Made a Booking</string>
    <string name="text_email_value">komangyudasaputra@gmail.com</string>
    <string name="text_username_profile">Komang Yuda Saputra</string>
    <string name="text_phone_number_value">0987866467334</string>
    <string name="text_profiles">Profile Data</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_edit_profiles">Edit Profile Data</string>
    <string name="text_name_hint">Enter Name</string>
    <string name="text_phone_number_hint">Enter phone number</string>
    <string name="text_from">From</string>
    <string name="text_start_from_value">Jakarta (JKTA)</string>
    <string name="text_to">To</string>
    <string name="text_departure_return">Round Trip?</string>
    <string name="text_departure_date_value">Select date</string>
    <string name="text_return_date_value">Select date</string>
    <string name="text_return_title">Return</string>
    <string name="text_passenger_title">Passengers</string>
    <string name="text_seat_class_title">Seat Class</string>
    <string name="text_dibawah_2_tahun">(Under 2 years)</string>
    <string name="text_bayi">Baby</string>
    <string name="text_2_11_tahun">(2 - 11 years)</string>
    <string name="text_anak">Child</string>
    <string name="text_12_tahun_keatas">(12 years and older)</string>
    <string name="text_dewasa">Adult</string>
    <string name="text_simpan">Save</string>
    <string name="text_hai_mau_ke_mana">Hi, Where are you going?</string>
    <string name="text_search_flights">Search Flights</string>
    <string name="text_passenger_type">Passenger 1 - Adult</string>
    <string name="text_empty_data">Data is still empty!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="error_when_getting_the_data_please_try_again_later">Error!</string>
    <string name="text_req_change_password">Request sent to your email!</string>
    <string name="text_register_failed">Registration Failed! : %1$s</string>
    <string name="text_email_title">Email</string>
    <string name="text_favorite_destination">Favorite Destinations</string>
    <string name="text_greetings">Hi, Where are you going?</string>
    <string name="text_search_flight">Search Flights</string>
    <string name="text_message_confirm_change_password">Are you sure you want to change the password?</string>
    <string name="text_2_children">2 Children</string>
    <string name="text_2_baby">2 Baby</string>
</resources>