<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_open_sans_semi_bold"
        android:text="@string/text_full_name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_full_name"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_open_sans_semi_bold"
        android:text="@string/text_profile_email"
        android:textSize="16sp"
        android:textStyle=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_checklist"
        app:endIconMode="clear_text"
        app:endIconTint="@color/green"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_no_tlp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_open_sans_semi_bold"
        android:text="@string/text_no_telp"
        android:textSize="16sp"
        android:textStyle=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_no_tlp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_checklist"
        app:endIconMode="clear_text"
        app:endIconTint="@color/green"
        tools:visibility="visible">

        <EditText
            android:id="@+id/et_no_tlp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_no_tlp"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_open_sans_semi_bold"
        android:text="@string/text_password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:passwordToggleEnabled="true"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_confirm_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_open_sans_semi_bold"
        android:text="@string/text_confirm_password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:passwordToggleEnabled="true"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_confirm_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>